[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/gui/EnvelopeEditor.gd" type="Script" id=1]
[ext_resource path="res://scripts/gui/EnvelopeScene.gd" type="Script" id=2]
[ext_resource path="res://misc/SmallText.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/gui/Fix_SpinBox.gd" type="Script" id=4]

[node name="EnvelopeEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_Tools" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 40.0

[node name="presets" type="OptionButton" parent="VBoxContainer/HBoxContainer_Tools"]
margin_right = 87.0
margin_bottom = 40.0
text = "Envelope"

[node name="min" type="Label" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Dimensions",
]]
margin_left = 91.0
margin_top = 13.0
margin_right = 124.0
margin_bottom = 27.0
text = " min "

[node name="min_SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Dimensions",
]]
margin_left = 128.0
margin_right = 202.0
margin_bottom = 40.0
rect_clip_content = true
size_flags_vertical = 3
min_value = -128.0
max_value = 0.0
value = -16.0
rounded = true
script = ExtResource( 4 )

[node name="max" type="Label" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Dimensions",
]]
margin_left = 206.0
margin_top = 13.0
margin_right = 241.0
margin_bottom = 27.0
text = " max "

[node name="max_SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Dimensions",
]]
margin_left = 245.0
margin_right = 319.0
margin_bottom = 40.0
rect_clip_content = true
focus_next = NodePath("../../editor")
size_flags_vertical = 3
max_value = 128.0
value = 16.0
rounded = true
script = ExtResource( 4 )

[node name="Menu_Edit" type="MenuButton" parent="VBoxContainer/HBoxContainer_Tools"]
margin_left = 323.0
margin_right = 359.0
margin_bottom = 40.0
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Control" parent="VBoxContainer/HBoxContainer_Tools"]
margin_left = 363.0
margin_right = 1263.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="loop" type="Label" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
]]
margin_left = 1267.0
margin_top = 13.0
margin_right = 1303.0
margin_bottom = 27.0
text = " loop "

[node name="loop_Checkbox" type="CheckButton" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
]]
margin_left = 1307.0
margin_right = 1383.0
margin_bottom = 40.0

[node name="attack" type="Label" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
"Editor_Envelope",
]]
margin_left = 1387.0
margin_top = 13.0
margin_right = 1412.0
margin_bottom = 27.0
text = " Atk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_Checkbox" type="CheckButton" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
]]
margin_left = 1416.0
margin_right = 1492.0
margin_bottom = 40.0

[node name="release" type="Label" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
]]
margin_left = 1496.0
margin_top = 13.0
margin_right = 1520.0
margin_bottom = 27.0
text = " Rel"

[node name="release_Checkbox" type="CheckButton" parent="VBoxContainer/HBoxContainer_Tools" groups=[
"Control_Loop",
]]
margin_left = 1524.0
margin_right = 1600.0
margin_bottom = 40.0

[node name="editor" type="Control" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1600.0
margin_bottom = 1200.0
rect_clip_content = true
focus_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 11
script = ExtResource( 1 )
font = ExtResource( 3 )

[node name="HBoxContainer_Parameters" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 1180.0
margin_right = 1600.0
margin_bottom = 1200.0

[node name="Button_copy" type="Button" parent="VBoxContainer/HBoxContainer_Parameters"]
margin_right = 42.0
margin_bottom = 20.0
text = "copy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_paste" type="Button" parent="VBoxContainer/HBoxContainer_Parameters"]
margin_left = 46.0
margin_right = 93.0
margin_bottom = 20.0
text = "paste"
__meta__ = {
"_edit_use_anchors_": false
}
